Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35962

QQuickView::grabWindow() does not work on Mac with Retina Displays?

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.3.0 Beta1
    • 5.2.0
    • None
    • MacBook Pro Retina, Mid 2012
      16Go RAM
      NVIDIA GeForce GT 650M 1GB
      OSX 10.9.1 (13B42)
      Desktop Qt 5.2 clang 64 bits
    • macOS
    • 20d9454ce6c32e61794f68d75fc82bd67737a306

    Description

      In my application, a QML script calls a slot of a C++ object that contains a pointer to the QQuickView instance. When the slot is called, the image is grabbed with QQuickView::grabWindow() and then saved as PNG format.

      I have attached a screenshot of the original Window content and the result image of QQuickView::grabWindow() in GrabWindowResult.png. It seems the grabbed image is the right dimension, but not capturing the complete Window (probably caused by the retina resolution).

      I can provide some code if needed.

      Thanks!

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              sorvig Morten Sørvig
              doumdi Dominic Létourneau
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes