Fix QQuickView::grabWindow() on retina displays

Multiply by window->devicePixelRatio() at all
qt_gl_read_framebuffer() call sites.

Task-number: QTBUG-35962
Change-Id: If58e4f97fc5d931ba2e222f8cb1a0641d52c3257
Reviewed-by: Gunnar Sletta <gunnar.sletta@jollamobile.com>