src/quick/scenegraph/qsgwindowsrenderloop.cpp
@@ -341,7 +341,7 @@ QImage QSGWindowsRenderLoop::grab(QQuickWindow *window)
     d->syncSceneGraph();
     d->renderSceneGraph(window->size());
 
-    QImage image = qt_gl_read_framebuffer(window->size(), false, false);
+    QImage image = qt_gl_read_framebuffer(window->size() * window->devicePixelRatio(), false, false);
     return image;
 }
 
